# pmm

./: Cargo.toml  config.janet  config.toml
.cargo/: config.toml
backends/: cargo.janet
frontends/: cargo.janet
package-managers/: cargo.toml  pacman.toml
package-managers/cargo/: Cargo.toml
package-managers/cargo/src/: lib.rs
package-managers/pacman/: Cargo.toml  Makefile
package-managers/pacman/src/: lib.rs
pmm-abi/: Cargo.toml
pmm-abi/src/: lib.rs
src/: args.rs  backend.rs  config.rs  error.rs  frontend.rs  main.rs  prelude.rs  util.rs  world.rs
