[package]
name = "pmm2"
version = "0.1.0"
edition = "2024"

[dependencies]
janetrs = { version = "0.8", features = ["inline-more"] }
colored = "3.0" # prob replace with ansi escapes
minreq = { version = "2.13", features = ["https"] }
miniserde = "0.1"
term_size = "0.3"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "debuginfo"
# panic = "abort"
